--- a/src/components/OnlineUsers.scss
+++ b/src/components/OnlineUsers.scss
@@ -28,4 +28,21 @@
     width: 40px;
     height: 40px;
   }
+
+  .online-true,
+  .online-false {
+    display: inline-block;
+    margin-right: 10px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+
+  .online-true {
+    background-color: #0ebb50;
+  }
+
+  .online-false {
+    background-color: red;
+  }
 }
