--- a/src/pages/project/Project.scss
+++ b/src/pages/project/Project.scss
@@ -53,4 +53,40 @@
     min-height: 40px;
     font-size: 1.5em;
   }
+
+  h4 {
+    color: index.$heading-color;
+  }
+
+  li {
+    padding: 16px;
+    border-radius: 4px;
+    border: 1px solid #f2f2f2;
+    margin-top: 20px;
+    box-shadow: 3px 3px 5px rgb(0 0 0 /0.05);
+    background-color: #fff;
+  }
+}
+
+.comment-author {
+  display: flex;
+  align-items: center;
+  color: index.$text-color;
+
+  .avatar {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
+}
+
+.comment-date {
+  color: index.$text-color;
+  font-size: 0.9em;
+  margin: 4px 0 10px;
+}
+
+.comment-content {
+  color: index.$text-color;
+  font-size: 0.9em;
 }
